--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>Register</module>
         <module>Gateway</module>
         <module>Chat</module>
+        <module>Playground</module>
     </modules>
     <packaging>pom</packaging>
     <!--统一管理jar包版本-->
