--- a/Gateway/pom.xml
+++ b/Gateway/pom.xml
@@ -33,6 +33,11 @@
 
         <!-- hystrix -->
         <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+            <!--            <version>${latest.version}</version>-->
+        </dependency>
+        <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
         </dependency>
