--- a/pom.xml
+++ b/pom.xml
@@ -121,7 +121,18 @@
                 <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
                 <version>2.2.10.RELEASE</version>
             </dependency>
-
+            <!--fegin组件-->
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-starter-openfeign</artifactId>
+                <version>3.0.2</version>
+            </dependency>
+            <!-- Feign Client for loadBalancing -->
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-loadbalancer</artifactId>
+                <version>3.1.0</version>
+            </dependency>
             <!-- redis -->
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
