--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>Chat</module>
         <module>Playground</module>
         <module>Relationship</module>
+        <module>Common-api</module>
         <!--        <module>Nacos</module>-->
     </modules>
     <packaging>pom</packaging>
@@ -67,11 +68,15 @@
                 <groupId>com.alibaba.cloud</groupId>
                 <artifactId>spring-cloud-alibaba-dependencies</artifactId>
                 <version>2021.1</version>
+                <type>pom</type>
+                <scope>import</scope>
             </dependency>
             <dependency>
                 <groupId>com.alibaba.cloud</groupId>
                 <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
                 <version>2021.1</version>
+                <type>pom</type>
+                <scope>import</scope>
             </dependency>
             <dependency>
                 <groupId>com.alibaba.cloud</groupId>
